--- a/api/templates/api/index.html
+++ b/api/templates/api/index.html
@@ -26,5 +26,19 @@
         <br><input class="btn btn-primary" type="submit" value="upload">
     
     </form>
+    {% if message %}
+    <br>{{message|upper}}
+    {% endif %}
+    <br><form action="{% url 'retrieve' %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+
+        <div class="form-group">
+            <input class="form-control" autofocus type="text" name="title" placeholder="product title">
+        </div>
+        
+
+        <br><input class="btn btn-primary" type="submit" value="retrieve">
+    
+    </form>
 </body>
 </html>
